src/test/ui/rfcs/rfc-2627-raw-dylib/link-ordinal-invalid-format.rs
#![feature(raw_dylib)]
//~^ WARN the feature `raw_dylib` is incomplete

#[link(name = "foo")]
extern "C" {
    #[link_ordinal("JustMonika")]
    //~^ ERROR illegal ordinal format in `link_ordinal`
    fn foo();
}

fn main() {}
